--- a/homework_2_and_5.ipynb
+++ b/homework_2_and_5.ipynb
@@ -1007,7 +1007,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "id": "3bbd4526",
       "metadata": {
         "id": "3bbd4526"
@@ -1748,14 +1748,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 4,
       "id": "67c2a74d",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "67c2a74d",
-        "outputId": "c95634d6-3efc-42f8-c841-17cdcb0cf792"
+        "outputId": "44223df6-3102-4d36-d311-8a98ec31d4a8"
       },
       "outputs": [
         {
@@ -1822,14 +1822,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 5,
       "id": "97376c98",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "97376c98",
-        "outputId": "af8024ff-8bf4-47b8-aa3b-f10a3e17b1bf"
+        "outputId": "a5b6e006-099b-4023-e258-ac0342fb7988"
       },
       "outputs": [
         {
@@ -1851,7 +1851,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 5
         }
       ],
       "source": [
@@ -1861,14 +1861,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 6,
       "id": "9fba8351",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9fba8351",
-        "outputId": "24c7f8c4-fada-4e48-d5d6-5e1fd65c8cd4"
+        "outputId": "2f8556b9-1a9b-426d-c2e4-fec8fce74ffa"
       },
       "outputs": [
         {
@@ -1886,7 +1886,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 6
         }
       ],
       "source": [
@@ -1920,14 +1920,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 7,
       "id": "d3a67a6d",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d3a67a6d",
-        "outputId": "d7a968ea-2af6-4afc-a582-317540d2720a"
+        "outputId": "a4137f8f-ec15-48ed-dd4e-380660e2a25d"
       },
       "outputs": [
         {
@@ -1947,7 +1947,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 7
         }
       ],
       "source": [
@@ -1957,14 +1957,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 8,
       "id": "d2c3750f",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d2c3750f",
-        "outputId": "98c3e7c7-835f-4958-81d9-67649aa41159"
+        "outputId": "23c9e28e-3c84-483d-c8c2-249b186f079f"
       },
       "outputs": [
         {
@@ -1984,7 +1984,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 8
         }
       ],
       "source": [
@@ -1993,14 +1993,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 9,
       "id": "1ae3deb9",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1ae3deb9",
-        "outputId": "8ec598c2-c26e-4144-b532-aaefaa9911a1"
+        "outputId": "cd1f106a-0bf9-4d22-d981-222c2ed4f0ed"
       },
       "outputs": [
         {
@@ -2020,7 +2020,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 9
         }
       ],
       "source": [
@@ -2039,14 +2039,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 10,
       "id": "46e937c2",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "46e937c2",
-        "outputId": "9880eae7-c33a-4b58-a7e1-7a0e95ed7314"
+        "outputId": "ffbe0ff8-d494-4a3a-901f-3577783fd679"
       },
       "outputs": [
         {
@@ -2068,7 +2068,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 11,
       "id": "7d95f6cd",
       "metadata": {
         "id": "7d95f6cd"
@@ -2102,7 +2102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 12,
       "id": "aedded22",
       "metadata": {
         "colab": {
@@ -2110,7 +2110,7 @@
           "height": 411
         },
         "id": "aedded22",
-        "outputId": "514705b6-b451-4563-d147-8a9dc807983e"
+        "outputId": "dc3dd7b6-55eb-47fd-d71e-5e680601e262"
       },
       "outputs": [
         {
@@ -2191,7 +2191,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5a341566-1057-4018-95d6-486ef1dc4aa4\">\n",
+              "  <div id=\"df-8938cc07-0347-45bc-ba61-6554567a2aca\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2431,7 +2431,7 @@
               "</table>\n",
               "<p>8 rows × 83 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5a341566-1057-4018-95d6-486ef1dc4aa4')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8938cc07-0347-45bc-ba61-6554567a2aca')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2482,12 +2482,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5a341566-1057-4018-95d6-486ef1dc4aa4 button.colab-df-convert');\n",
+              "          document.querySelector('#df-8938cc07-0347-45bc-ba61-6554567a2aca button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5a341566-1057-4018-95d6-486ef1dc4aa4');\n",
+              "          const element = document.querySelector('#df-8938cc07-0347-45bc-ba61-6554567a2aca');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2510,7 +2510,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 12
         }
       ],
       "source": [
@@ -2550,7 +2550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 13,
       "id": "c903c030",
       "metadata": {
         "colab": {
@@ -2558,7 +2558,7 @@
           "height": 300
         },
         "id": "c903c030",
-        "outputId": "530103dc-041d-4533-e7f0-9cd1823f1060"
+        "outputId": "b4a016f7-88fd-423d-fddc-679384e89650"
       },
       "outputs": [
         {
@@ -2597,7 +2597,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ba8b6ebe-da8b-49ec-b466-cccf86687b59\">\n",
+              "  <div id=\"df-b1912993-cc01-4de7-81e4-a25c3d1f9408\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2746,7 +2746,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ba8b6ebe-da8b-49ec-b466-cccf86687b59')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b1912993-cc01-4de7-81e4-a25c3d1f9408')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2797,12 +2797,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ba8b6ebe-da8b-49ec-b466-cccf86687b59 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b1912993-cc01-4de7-81e4-a25c3d1f9408 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ba8b6ebe-da8b-49ec-b466-cccf86687b59');\n",
+              "          const element = document.querySelector('#df-b1912993-cc01-4de7-81e4-a25c3d1f9408');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2825,7 +2825,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 13
         }
       ],
       "source": [
@@ -2845,7 +2845,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 14,
       "id": "7d4d9dcc",
       "metadata": {
         "id": "7d4d9dcc"
@@ -2858,14 +2858,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 15,
       "id": "45a0e183",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "45a0e183",
-        "outputId": "1febfaa1-0f31-4f90-e947-1e4055303345"
+        "outputId": "bc2fad84-7ae0-492b-df9d-ccd553c05177"
       },
       "outputs": [
         {
@@ -5741,6 +5741,74 @@
       },
       "source": [
         "Лучший результат для данного метода - 24.1% на тестовой выборке."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Логистическая регрессия"
+      ],
+      "metadata": {
+        "id": "h6PletC73Tbv"
+      },
+      "id": "h6PletC73Tbv"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix\n",
+        "from sklearn.metrics import classification_report\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "\n",
+        "clf = LogisticRegression(solver=\"liblinear\")\n",
+        "clf.fit(x_train, y_train)\n",
+        "\n",
+        "y_test_predict = clf.predict(x_test)\n",
+        "y_train_predict = clf.predict(x_train)\n",
+        "\n",
+        "err_test  = np.mean(y_test  != y_test_predict)\n",
+        "err_train  = np.mean(y_train != y_train_predict)\n",
+        "\n",
+        "print(f\"{err_train=}\")\n",
+        "print(f\"{err_test=}\", end=\"\\n\\n\")\n",
+        "\n",
+        "print(confusion_matrix(y_test_predict, y_test))\n",
+        "print(classification_report(y_test, y_test_predict))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zYh-UnSK3dNx",
+        "outputId": "52df1d5b-6e53-438a-a988-a31a87cbe533"
+      },
+      "id": "zYh-UnSK3dNx",
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "err_train=0.29023170240901514\n",
+            "err_test=0.2878822717866176\n",
+            "\n",
+            "[[   9   10    1    0]\n",
+            " [  85 2651  330  593]\n",
+            " [   0    0    0    0]\n",
+            " [   0  172   61  437]]\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           1       0.45      0.10      0.16        94\n",
+            "           2       0.72      0.94      0.82      2833\n",
+            "           3       0.00      0.00      0.00       392\n",
+            "           4       0.65      0.42      0.51      1030\n",
+            "\n",
+            "    accuracy                           0.71      4349\n",
+            "   macro avg       0.46      0.36      0.37      4349\n",
+            "weighted avg       0.64      0.71      0.66      4349\n",
+            "\n"
+          ]
+        }
       ]
     },
     {
